add virtual threads to the enrichment service